# openenv-clinical-trial-eligibility-screener

./: .dockerignore  .env.example  .gitignore  Dockerfile  EVALUATOR_GUIDE.md  README.md  baseline.py  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml
scripts/: quick_check.py  validate-submission.sh
server/: __init__.py  app.py  case_data.py  env.py
server/data/: cases.json  ground_truth.json
tests/: test_env.py  test_grader.py  test_inference.py
